--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^25.0.1",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10",
